documentation target now uses documentation/build.xml
git-svn-id: https://scm.mmbase.org/mmbase/trunk@7841 91430c5f-d668-0410-9e7d-dd663366dcfd